Fix footer alignment

--- a/style.css
+++ b/style.css
@@ -411,3 +411,4 @@ section + section {
 
 }
 
+footer p { text-align: center !important; margin-left: auto; margin-right: auto; }
